config/Appthree/app3-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app3
  annotations:
    spec.ingressClassName: "nginx"
spec:
  rules:
  - host: app3.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-three
            port:
              number: 80
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-three
            port:
              number: 80
